<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Otter::SearchPreferencesPage</class>
 <widget class="QWidget" name="Otter::SearchPreferencesPage">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
     <item>
      <layout class="QVBoxLayout" name="searchViewLayout">
       <item>
        <widget class="Otter::LineEditWidget" name="searchFilterLineEditWidget">
         <property name="placeholderText">
          <string>Search…</string>
         </property>
         <property name="clearButtonEnabled">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="Otter::ItemViewWidget" name="searchViewWidget">
         <property name="editTriggers">
          <set>QAbstractItemView::CurrentChanged</set>
         </property>
         <property name="dragEnabled">
          <bool>true</bool>
         </property>
         <property name="dragDropOverwriteMode">
          <bool>false</bool>
         </property>
         <property name="dragDropMode">
          <enum>QAbstractItemView::InternalMove</enum>
         </property>
         <property name="defaultDropAction">
          <enum>Qt::MoveAction</enum>
         </property>
         <property name="alternatingRowColors">
          <bool>true</bool>
         </property>
         <attribute name="headerDefaultSectionSize">
          <number>200</number>
         </attribute>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="searchButtonsLayout" stretch="0,0,0,0,1,0">
       <item>
        <widget class="QPushButton" name="addSearchButton">
         <property name="text">
          <string>Add</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="editSearchButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Edit…</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="updateSearchButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Update</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="removeSearchButton">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
          <string>Remove</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
        </spacer>
       </item>
       <item>
        <layout class="QHBoxLayout" name="searchMoveButtonsLayout" stretch="0,1,0">
         <item>
          <widget class="QToolButton" name="moveUpSearchButton">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="toolTip">
            <string>Move Up</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="searchMoveButtonsSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeType">
            <enum>QSizePolicy::Minimum</enum>
           </property>
          </spacer>
         </item>
         <item>
          <widget class="QToolButton" name="moveDownSearchButton">
           <property name="enabled">
            <bool>false</bool>
           </property>
           <property name="toolTip">
            <string>Move Down</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QCheckBox" name="enableSearchSuggestionsCheckBox">
     <property name="text">
      <string>Enable search suggestions</string>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="enableSearchSuggestionsInPrivateTabsLayout">
     <property name="spacing">
      <number>0</number>
     </property>
     <item>
      <spacer name="enableSearchSuggestionsInPrivateTabsSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeType">
        <enum>QSizePolicy::Fixed</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>20</width>
         <height>0</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QCheckBox" name="enableSearchSuggestionsInPrivateTabsCheckBox">
       <property name="text">
        <string>Enable search suggestions in private tabs</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Otter::ItemViewWidget</class>
   <extends>QTreeView</extends>
   <header>src/ui/ItemViewWidget.h</header>
  </customwidget>
  <customwidget>
   <class>Otter::LineEditWidget</class>
   <extends>QLineEdit</extends>
   <header>src/ui/LineEditWidget.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>searchFilterLineEditWidget</tabstop>
  <tabstop>searchViewWidget</tabstop>
  <tabstop>addSearchButton</tabstop>
  <tabstop>editSearchButton</tabstop>
  <tabstop>updateSearchButton</tabstop>
  <tabstop>removeSearchButton</tabstop>
  <tabstop>moveUpSearchButton</tabstop>
  <tabstop>moveDownSearchButton</tabstop>
  <tabstop>enableSearchSuggestionsCheckBox</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
